# aizynthmodels

./: .gitignore  LICENSE  README.md  env-dev.yml  pyproject.toml
aizynthmodels/: model_interface.py
aizynthmodels/chemformer/: __init__.py
aizynthmodels/chemformer/data/: __init__.py  base.py  datamodule.py  encoder.py  tokenizer.py
aizynthmodels/chemformer/interface/: chemformer.py  impurity_chemformer.py
aizynthmodels/chemformer/models/: __init__.py  bart.py  base_transformer.py  classifier.py
aizynthmodels/quick_filter/: __init__.py  data.py
aizynthmodels/route_distances/: __init__.py  interface.py  models.py  qptuna_optim.py
aizynthmodels/template_based/: __init__.py  data.py  utils.py
aizynthmodels/utils/: data_sampler.py  hydra.py  optuna.py  smiles.py  trainer.py  type_utils.py  writing.py
service/chemformer/: bart_service.py  classifier_service.py  disconnection_aware_service.py  service_utils.py
tests/: conftest.py  test_model_interface.py
tests/chemformer/: conftest.py
tests/pipelines/: test_data_utils.py  test_file_utils.py
tests/quick_filter/: conftest.py  test_data.py  test_generation.py  test_interface.py  test_model.py  test_pipeline_tools.py
tests/route_distances/: test_data.py  test_interface.py  test_models.py
tests/template_based/: conftest.py  test_data.py  test_interface.py  test_model.py  test_pipeline_tools.py
tests/utils/: test_augmenter.py  test_callbacks.py  test_data_sampler.py  test_loading.py  test_scores.py  test_smiles.py  test_tokenizer.py  test_trainer.py  test_writing.py
tests/utils/data/: test_smiles.smi  (+1 more)
(+155 files in other folders)
